--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container-fluid">
                 <a href="https://www.turing.com" class="navbar-brand"><img src="turing.jpg"></a>
                 <form class="d-flex" role="search">
-                    <a href="#"><p class="text-muted">Apply for Jobs</p></a>
+                    <a href="#"><p class="text-muted">Apply Jobs</p></a>
                     <button class="btn btn-primary btn-lg" type="submit">Hire Developers</button>
                   </form>
             </div> 
